--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,6 +17,10 @@ spring:
       connection-timeout: 30000
   jackson:
     time-zone: GMT+8
+  data:
+    redis:
+      repositories:
+        enabled: false
   jpa:
     hibernate:
       ddl-auto: update
@@ -43,10 +47,6 @@ spring:
     type: ehcache
     ehcache:
       config: classpath:ehcache.xml
-  data:
-    redis:
-      repositories:
-        enabled: false
   redis:
     database: 0
     host: 148.70.173.241
@@ -59,8 +59,10 @@ spring:
         max-wait: -1
         max-idle: 10
         min-idle: 2
-
-############################################################
+  servlet:
+    multipart:
+      max-file-size: 500000
+      max-request-size: 5000000
 
 server:
   port: 10001
@@ -71,18 +73,19 @@ logging:
     root: info
   path: ../log/
 
-#############################################################
-
-jianzhi:
+humor:
   base:
     system:
       admin:
         name: admin
         password: admin123
-  wx:
-    appId: wxa893838fe64bd72c
-    appSecret: f5157912906d57b2d14178012b1817a6
+  file:
+    upload:
+      path: E:/jianzhi_upload/
   resource:
     scan: com.fzjianzhi.jianzhi
   dict:
     scan: com.fzjianzhi.jianzhi
+  wx:
+    appId: wxa893838fe64bd72c
+    appSecret: f5157912906d57b2d14178012b1817a6
